fixing css errors
- The width of the button was uneven

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -107,4 +107,8 @@
             opacity: 1;
         }
     }
+
+    .load-more-btn {
+        width: -webkit-fill-available;
+    }
 }
